[package]
name = "hanzo-http-api"
description = "Hanzo AI - HTTP API Library"
license = "MIT"
version = "1.1.21"
edition = "2021"
authors = ["Nico Arqueros <nico@hanzo.ai>"]
repository = "https://github.com/hanzonet/http-api"
homepage = "https://hanzo.ai"

[dependencies]
bytes = "1.10.1"
once_cell = "1.19.0"
tokio-stream = "0.1.10"
tokio-rustls = "0.23"
rustls-pemfile = "1.0.3"
tracing-subscriber = "0.3.18"

[dependencies.tokio-tungstenite]
version = "0.26.2"
features = ["native-tls"]
[dependencies.rmcp]
version = "0.8"
features = ["server", "macros"]
[dependencies.anyhow]
version = "1.0.94"

[dependencies.tracing]
version = "0.1.40"

[dependencies.uuid]
version = "1.6.1"
features = ["v4"]
[dependencies.tokio-util]
version = "0.7.13"
features = ["codec"]
[dependencies.hyper]
version = "0.14.30"
features = ["server"]
[dependencies.rustls]
version = "0.23.27"

[dependencies.tokio]
version = "1.36"
features = ["rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time"]

[dependencies.rand]
version = "=0.8.5"

[dependencies.reqwest]
version = "0.11.27"

[dependencies.hanzo-tools]
version = "1.1.21"
[dependencies.hanzo-messages]
version = "1.1.13"
[dependencies.ed25519-dalek]
version = "2.1.1"
features = ["rand_core"]

[dependencies.x25519-dalek]
version = "2.0.1"
features = ["static_secrets"]

[dependencies.async-channel]
version = "1.6.1"

[dependencies.futures]
version = "0.3.30"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.warp]
version = "0.3.7"
features = ["compression", "compression-gzip", "tls"]
[dependencies.async-trait]
version = "0.1.74"

[dependencies.chrono]
version = "0.4"

[dependencies.utoipa-swagger-ui]
version = "7.1.0"
optional = true
features = ["vendored"]
[dependencies.utoipa]
version = "4.2.3"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[features]
default = []
swagger-ui = ["utoipa-swagger-ui"]
